[package]
name = "non-empty"
version = "0.1.0"
authors = ["illia <lolnogenerics@gmail.com>"]
description = "Non-empty list data structure for Rust."
documentation = "https://docs.rs/non-empty/"
homepage = "https://github.com/fwrs/non-empty-rs"
repository = "https://github.com/fwrs/non-empty-rs"
keywords = ["rust", "data-structures", "non-empty", "list"]
categories = ["data-structures"]
license = "MPL-2.0"
readme = "README.markdown"

[dependencies]
